Se completa funcionalidad de consumo de api y almacenamiento de información

--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -39,8 +39,9 @@ jobs:
         cat <<EOL > .env
         URL=https://query1.finance.yahoo.com/v8/finance/chart/TSM?events=capitalGain%7Cdiv%7Csplit&formatted=true&includeAdjustedClose=true&interval=1d&period1=[0]&period2=[1]&symbol=TSM&userYfid=true&lang=en-US&region=US
         DB_PATH=src/static/historical.db
-        SAMPLE_FILE_PATH=src/static/historica.csv
+        SAMPLE_FILE_PATH=src/static/historical
         LOGS_DIR_PATH=src/logs
+        NAME_TABLE=historical_data
         EOL
 
     - name: Run data collection script
