--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '*/10 * * * *'  # Ejecutar diariamente a medianoche
+    - cron: '30 1 * * *'  # Ejecutar diariamente a medianoche
 
 jobs:
   ingestion:
