--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -51,8 +51,9 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git pull --rebase origin master
         git add .
         git commit -m 'Update data files [skip ci]'
-        git push
+        git push origin master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
