--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -51,7 +51,9 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git stash
         git pull --rebase origin master
+        git stash pop || true
         git add .
         git commit -m 'Update data files [skip ci]'
         git push origin master
