--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        ref: master
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -51,9 +54,6 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git stash
-        git pull --rebase origin master
-        git stash pop || true
         git add .
         git commit -m 'Update data files [skip ci]'
         git push origin master
