--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -1,109 +1,109 @@
-name: Proyecto Integrador V
+# name: Proyecto Integrador V
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
-  schedule:
-    - cron: '0 0 * * *'  # Ejecutar diariamente a las 12 am UTC
+# on:
+#   push:
+#     branches:
+#       - master
+#   pull_request:
+#     branches:
+#       - master
+#   schedule:
+#     - cron: '0 0 * * *'  # Ejecutar diariamente a las 12 am UTC
 
-jobs:
-  process_data:
-    runs-on: ubuntu-latest
+# jobs:
+#   process_data:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        ref: master
-        fetch-depth: 0
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v2
+#       with:
+#         ref: master
+#         fetch-depth: 0
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.13'
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: '3.13'
 
-    - name: Create virtual environment
-      run: python -m venv .venv
+#     - name: Create virtual environment
+#       run: python -m venv .venv
 
-    - name: Activate environment
-      run: source .venv/bin/activate
+#     - name: Activate environment
+#       run: source .venv/bin/activate
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install .
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install .
 
-    - name: Create environment file
-      run: |
-        cat <<EOL > .env
-        URL=https://query1.finance.yahoo.com/v8/finance/chart/TSM?events=capitalGain%7Cdiv%7Csplit&formatted=true&includeAdjustedClose=true&interval=1d&period1=[0]&period2=[1]&symbol=TSM&userYfid=true&lang=en-US&region=US
-        DB_PATH=src/static/data/historical.db
-        SAMPLE_FILE_PATH=src/static/data/historical
-        LOGS_DIR_PATH=src/logs
-        NAME_TABLE=historical_data
-        EOL
+#     - name: Create environment file
+#       run: |
+#         cat <<EOL > .env
+#         URL=https://query1.finance.yahoo.com/v8/finance/chart/TSM?events=capitalGain%7Cdiv%7Csplit&formatted=true&includeAdjustedClose=true&interval=1d&period1=[0]&period2=[1]&symbol=TSM&userYfid=true&lang=en-US&region=US
+#         DB_PATH=src/static/data/historical.db
+#         SAMPLE_FILE_PATH=src/static/data/historical
+#         LOGS_DIR_PATH=src/logs
+#         NAME_TABLE=historical_data
+#         EOL
 
-    - name: Run data collection script
-      run: python src/collector.py
+#     - name: Run data collection script
+#       run: python src/collector.py
 
-    - name: Run data modelling script
-      run: python src/modeller.py
+#     - name: Run data modelling script
+#       run: python src/modeller.py
 
-    - name: Run dashboard script
-      run: python src/dashboard.py --save-html
+#     - name: Run dashboard script
+#       run: python src/dashboard.py --save-html
 
-    - name: Prepare dashboard files
-      run: |
-        # Crear directorio docs si no existe
-        mkdir -p docs
-        # Encontrar el dashboard más reciente
-        LATEST_DASHBOARD=$(ls -t src/static/dashboard/dashboard_*.html | head -n1)
-        if [ -z "$LATEST_DASHBOARD" ]; then
-          echo "No se encontró ningún archivo de dashboard"
-          exit 1
-        fi
-        # Copiar el dashboard más reciente a index.html
-        cp "$LATEST_DASHBOARD" docs/index.html
-        echo "Dashboard copiado: $LATEST_DASHBOARD -> docs/index.html"
+#     - name: Prepare dashboard files
+#       run: |
+#         # Crear directorio docs si no existe
+#         mkdir -p docs
+#         # Encontrar el dashboard más reciente
+#         LATEST_DASHBOARD=$(ls -t src/static/dashboard/dashboard_*.html | head -n1)
+#         if [ -z "$LATEST_DASHBOARD" ]; then
+#           echo "No se encontró ningún archivo de dashboard"
+#           exit 1
+#         fi
+#         # Copiar el dashboard más reciente a index.html
+#         cp "$LATEST_DASHBOARD" docs/index.html
+#         echo "Dashboard copiado: $LATEST_DASHBOARD -> docs/index.html"
 
-    - name: Commit and push changes
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add .
-        git commit -m 'Update data files [skip ci]'
-        git push origin master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#     - name: Commit and push changes
+#       run: |
+#         git config --global user.name 'github-actions[bot]'
+#         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+#         git add .
+#         git commit -m 'Update data files [skip ci]'
+#         git push origin master
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  deploy_dashboard:
-    needs: process_data
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
+#   deploy_dashboard:
+#     needs: process_data
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: write
+#       pages: write
+#       id-token: write
 
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.deployment.outputs.page_url }}
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v4
 
-    - name: Setup Pages
-      uses: actions/configure-pages@v5
+#     - name: Setup Pages
+#       uses: actions/configure-pages@v5
 
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: docs
+#     - name: Upload artifact
+#       uses: actions/upload-pages-artifact@v3
+#       with:
+#         path: docs
 
-    - name: Deploy to GitHub Pages
+#     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
